
	* build-info: create ./src/build.h instead of ./build.in

	* configure.in: execute build-info, since some .c files include it, but it hasn't been there before

	* lisp/sawfish/wm/viewport.jl: move viewport-boundary-mode and scroll-viewport-steps from Workspace
				       to Workspace/Viewport in Sawfish-UI

	* m4: add that directory to make libtool 1.x shut up

2008-12-31  Christopher Bratusek <nano-master@gmx.de>
	* config.h.in
	* configure.in
	* Makedefs.in: temporarily revert configure.in rework, since pango checks seem to not work

2008-12-30  Christopher Bratusek <nano-master@gmx.de>
	* Makedefs.in
	* configure.in: Major rework of configure.in [breaks build with XFree86 atm]

	* config.h.in: regenerated

	* sawmill.h
	* sawfish.h: renamed sawmill.h to sawfish.h

	* sawmill_subrs.h
	* sawfish_subrs.h: renamed sawmill_subrs.h to sawfish_subrs.h

	* src/*.[ch]: include sawfish.h/sawfish_subrs.h from now on
		      replace any occurence of sawmill with sawfish

	* etc/config.guess
	* etc/config.sub
	* etc/install-sh: don't ship those files

	* man/Makefile
	* man/sawmill.texi
	* man/sawfish.texi: renamed sawmill.texi to sawfish.texi

	* sawfish.ebuild.in: don't leak copyright info
			     more configure magic
			     don't apply libtool.patch -> obsolete
			     don't mark ppc64 as ~ since librep(svn) does now compile on ppc64
	
	* lisp/sawfish/wm/defaults.jl: renamed alias to sawfish-defaults

	* lisp/sawfish/wm/animation/outline.jl
	* lisp/sawfish/wm/frames.jl
	* lisp/sawfish/wm/custom-defaults.jl
	* lisp/sawfish/wm/gaol.jl
	* lisp/sawfish/wm/customize.jl
	* lisp/sawfish/wm/theming/make-theme-preview.jl
	* lisp/sawfish/wm/theming/make-theme.jl
	* lisp/sawfish/wm/ext/edge-flip.jl
	* lisp/sawfish/wm/ext/tooltips.jl
	* lisp/sawfish/wm/ext/beos-window-menu.jl
	* lisp/sawfish/wm/ext/match-window.jl
	* lisp/sawfish/wm/ext/audio-events.jl
	* lisp/sawfish/wm/ext/error-handler.jl
	* lisp/sawfish/wm/ext/old-window-menu.jl
	* lisp/sawfish/wm/ext/shade-hover.jl