@@ -30,6 +30,8 @@ they occurred between. For more detailed information see the
 @item Create src/build.h, since it has been missing before [Christopher Bratusek]
 
 @item Fixed an "unknown remote error" that might appear [Alexey I. Froloff]
+
+@item Make "make uninstall" work again [Christopher Bratusek]
 @end itemize
 
 @item New features:
@@ -69,6 +71,8 @@ they occurred between. For more detailed information see the
 @item ~/.sawmillrc has been dropped from the list of configuration files [Christopher Bratusek]
 
 @item Reworked Sawfish-UI [Christopher Bratusek]
+
+@item Dropped libgnome|gnomeui|gnomecanvas widgets, use pure gtk instead [Christopher Bratusek]
 @end itemize
 @end itemize
 
